# anchor-moe-lora

./: .env.example  .gitattributes  .gitignore  ACKNOWLEDGEMENTS.md  QUICKSTART.md  QUICKSTART.zh-CN.md  README.md  README.zh-CN.md  START_HERE.md  START_HERE.zh-CN.md  THIRD_PARTY_SKILLS.md  anchor.ps1  pyproject.toml
configs/benchmark/: default.json  formal_v3_af_control.json  heldout_cases_v1.jsonl  heldout_q4_budget_v1.json  (+2 more)
docs/: CANONICAL_DISTILLATION_CONTRACT.md  CANONICAL_DISTILLATION_CONTRACT.zh-CN.md  HANDOFF_DISTILLATION_20260720.md  PROJECT_STATUS.md  README.md  README.zh-CN.md  agent_v3_training_contract.md  anchor_sandbox_execution.md  architecture_five_stage_mvp.md  architecture_five_stage_mvp.zh-CN.md  cc_switch_v3_16_5_integration.md  cc_switch_v3_16_5_integration.zh-CN.md  collaboration_curriculum_v2.md  data_pipeline.md  dataset_card_partial_gold.md  dataset_card_partial_gold.zh-CN.md  distill_train_handoff.md  distillation_dashboard.md  distillation_dashboard.zh-CN.md  distillation_pipeline_profiles.md  distillation_pipeline_profiles.zh-CN.md  documentation_i18n.md  documentation_i18n.zh-CN.md  formal_af_windows_native_serving.md  formal_v2_lowmem.md  formal_v2_probe_20260711.md  formal_v3_training.md  formal_v3_training.zh-CN.md  frozen_prefix_qreader_distillation_v2.md  frozen_prefix_qreader_distillation_v2.zh-CN.md  gemma3_1b_it_alora_prefix_kv_tf32_v1.md  gemma3_1b_it_alora_prefix_kv_tf32_v1.zh-CN.md  glm52_provider_pricing.md  glm52_provider_pricing.zh-CN.md  heldout_benchmark.md  opencode_dual_build.md  opencode_session_distillation.md  qwen25_lora_diagnostic.md  qwen25_lora_diagnostic.zh-CN.md  qwen_alora_prefix_kv_tf32_v2.md  (+47 more)
scripts/: run_distill_train_handoff.ps1  run_distill_train_handoff.py
skills/: frontend.md  plan.md  review.md  security.yaml  tool_policy.md
tests/: ccswitch_anchor_route_behavior.py  test_adaptive_contract_powershell51.py  test_agent_v3_contract.py  test_artifact_validation_batch.py  test_benchmark_heldout.py  test_benchmark_report.py  test_benchmark_runner.py  test_ccswitch_anchor_route_patch.py  test_ccswitch_metadata.py  test_curriculum.py  test_data_automation.py  test_data_automation_contract_v2.py  test_data_cleaning.py  test_data_cli.py  test_data_mutator.py  test_data_pipeline.py  test_data_provider.py  test_data_shard_merge.py  test_data_sops.py  test_data_teacher.py  test_distill_train_handoff.py  test_distillation_catalog.py  test_distillation_control.py  test_distillation_dashboard.py  test_distillation_profiles.py  test_experiment_registry.py  test_formal_af_benchmark_preflight.py  test_formal_authorization_consumer.py  test_formal_checkpoint.py  test_formal_execution_gate.py  test_formal_review_protocol.py  test_formal_v3_af_evaluation.py  test_formal_v3_training.py  test_frozen_prefix_qreader_profile.py  test_frozen_prefix_qreader_release.py  test_frozen_prefix_qreader_v2_consumer.py  test_full_v3_snapshot.py  test_gemma3_alora_prefix_kv_diagnostic.py  test_gemma3_five_role_qonly_launcher_v1.py  test_gemma3_five_role_qonly_v1.py  (+100 more)
(+746 files in other folders)
