[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchor-moe-lora"
version = "0.1.0"
description = "Anchor-MoE-LoRA task-routed adapter research scaffold"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.23,<5",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
teacher = ["httpx>=0.28"]
training = [
  "accelerate>=1.0",
  "bitsandbytes>=0.48.2",
  "datasets>=4.0",
  "pyarrow>=21,<22",
  "peft>=0.19",
  "protobuf>=5",
  "safetensors>=0.7",
  "sentencepiece>=0.2",
  "transformers>=5.10.1,<6",
  "trl>=1.0",
]
download = ["huggingface-hub>=0.16"]
dev = [
  "pytest>=8",
  "ruff>=0.14",
  "types-PyYAML>=6.0",
]

[project.scripts]
anchor-data = "anchor_mvp.data.cli:main"
anchor-train = "anchor_mvp.training.cli:main"
anchor-qwen-diagnostic = "anchor_mvp.training.qwen_lora_diagnostic:main"
anchor-qwen-prerequisites = "anchor_mvp.research.qwen_train_prerequisite_consumer:main"
anchor-qwen-alora-prefix-kv = "anchor_mvp.research.qwen_alora_prefix_kv_diagnostic:main"
anchor-gemma3-alora-prefix-kv = "anchor_mvp.research.gemma3_alora_prefix_kv_diagnostic:main"
anchor-qwen-toy-prerequisite = "anchor_mvp.research.qwen_toy_prerequisite_consumer:main"
anchor-qwen-prerequisites-v2 = "anchor_mvp.research.qwen_train_prerequisite_consumer_v2:main"
anchor-benchmark = "anchor_mvp.benchmark.cli:main"
anchor-heldout = "anchor_mvp.benchmark.heldout_cli:main"
anchor-swebench = "anchor_mvp.swebench.cli:main"
anchor-ccswitch-metadata = "anchor_mvp.integrations.ccswitch_metadata.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"anchor_mvp.integrations.ccswitch_metadata" = ["fixtures/*.json", "NOTICE.txt"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
